jenkinsPollSCM